methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  while (estSurBiscuit==false){
    if (getColorSol==Color.green){
    poseBrosse()
    leveBrosse()
    recule()
    avance()
    avance()
    }else if{
      recule()
      gauche()
      avance()
    }else if{
      recule()
      droite()
      avance()
    }
  }
    }
    // Write your code here
